2004-08-30  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddMedia.py: use new MediaList update routine
	* src/DisplayModels.py: new update list routine
	* src/ImageSelect.py: use new MediaList update routine
	* src/MediaView.py: use new MediaList update routine
	* src/PlaceView.py: new update list routine
	* src/SourceView.py: new update list routine
	
2004-08-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: add remove_place function
	* src/DisplayModels.py: added row deletion and updating
	functions
	* src/EditPlace.py: Make a distinction between update and
	new
	* src/EditSource.py: Make a distinction between update and
	new
	* src/PeopleModel.py: remove debugging code
	* src/PlaceView.py: better handling of updating and deleiting
	* src/SourceView.py: better handling of updating and deleiting

2004-08-28  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: cleanup dialogs
	* src/EditPerson.py: update screen properly
	* src/PeopleModel.py: handle stored maps correctly
	* src/PeopleView.py: handle stored maps correctly
	* src/gramps_main.py: eliminate unnecessary rebuilds, display
	loading dialog
	* src/gramp.glade: loading dialog
	
2004-08-25  Jim Smart  <jim@jimsmart.org>
	* src/RelLib.py: guess_gender fix

2004-08-28  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: make a distiction between adding a person
	and editing a person.
	* src/PeopleView.py: drop unused goto_active_person parameter
	* src/gramps_main.py: drop unused goto_active_person parameter

2004-08-27  Tim Waugh  <twaugh@redhat.com>
	* src/SelectObject.py (SelectObject.redraw): Use GRAMPS ID for
	user display.

2004-08-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DisplayModels.py: fix place and source lists
	* src/PlaceView.py: fix place lists
	* src/SourceView.py: fix source lists
	* src/Sort.py: use locale.strcoll for sorting
	* src/RelLib.py: don't use accent for sort name